@@ -6,10 +6,11 @@ from pkgcore.ebuild.cpv import CPV
 
 class SimpleTree(tree):
 
-    def __init__(self, cpv_dict, pkg_klass=None):
+    def __init__(self, cpv_dict, pkg_klass=None, livefs=False):
         self.cpv_dict = cpv_dict
         if pkg_klass is None:
             pkg_klass = CPV
+        self.livefs = livefs
         self.package_class = pkg_klass
         tree.__init__(self)
 
